@@ -7,8 +7,11 @@ siduxcc (0.9.31) UNRELEASED; urgency=low
   * debian: konsole dependency added (solves the problems with the icewm)
   * hermes: descriptions updated
   * translation: de updated 
+  * kde: kernel: kernel-remove reload problem solved
+  * kde: network: tab problem solved
+  * kde: network: networkcard reload problem solved
 
- -- Fabian Wuertz <xadras@sidux.com>  Sun, 23 Mar 2008 21:41:19 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Sun, 23 Mar 2008 22:48:21 +0100
 
 siduxcc (0.9.30) unstable; urgency=low
 
